# seamm_mdi

./: .buildinfo  .gitattributes  .gitignore  .lgtm.yml  HISTORY.rst  Makefile  README.md  api.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  user_guide.html
.github/: CONTRIBUTING.md
.github/workflows/: BranchCI.yaml  CI.yaml  Release.yaml
_modules/: index.html
_modules/seamm_mdi/: mdi_engine.html
_sources/: api.rst.txt
_sources/api/: modules.rst.txt  seamm_mdi.rst.txt
_static/: documentation_options.js
api/: modules.html  seamm_mdi.html
developer_guide/: index.html
developer_guide/campaigns/2026-07-06/: NOTES.html
devtools/: README.md
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  conf.py  getting_started.rst  index.rst  make.bat  user_guide.rst
docs/developer_guide/: index.rst
docs/developer_guide/campaigns/2026-07-06/: NOTES.rst
seamm_mdi/: __init__.py  mdi_engine.py
seamm_mdi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: mock_engine.py  test_mdi_engine.py  test_mopac_integration.py
