[build-system]
requires = ["setuptools>=61.0", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seamm_mdi"
description = "A reusable MDI driver facility for SEAMM"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Paul Saxe", email = "psaxe@molssi.org" },
]
license = { text = "BSD-3-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "pymdi",
    "numpy",
    "seamm-util",
]

[project.urls]
"Source" = "https://github.com/molssi-seamm/seamm_mdi/"
"Documentation" = "https://molssi-seamm.github.io/seamm_mdi/"

[project.optional-dependencies]
test = ["pytest>=6.1.2"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

[tool.setuptools.package-data]
seamm_mdi = [
    "py.typed",
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "seamm_mdi/_version.py"
